[package]
name = "just-music-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unm_engine = "0.3.0-pre.0"
unm_types = "0.3.0-pre.0"
unm_engine_qq = "0.3.0-pre.1"
unm_engine_migu = "0.3.0-pre.1"
unm_engine_kuwo = "0.3.0-pre.1"
unm_engine_bilibili = "0.3.0-pre.1"
unm_engine_pyncm = "0.3.0-pre.1"
unm_engine_kugou = "0.3.0-pre.1"
unm_engine_ytdl = "0.3.0-pre.1"
unm_api_utils = "0.3.0-pre.1"
futures = "0.3"
mimalloc = "0.1.29"
tokio = "1.14.1"
actix-web = "4"
actix-cors = "0.6.3"
reqwest = "0.11.11"
base64 = "0.13.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[dependencies.async-std]
version = "1.6"
features = ["attributes"]